<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_abbrevation">MSDCS</string>
    <string name="app_name">Mobile Survey &amp; Data Collection</string>

    <!-- Tabs -->
    <string name="map">Map</string>
    <string name="timeline">Timeline</string>
    <string name="export">Export</string>

    <!-- Generic -->
    <string name="loading">Loading</string>
    <string name="choose">Choose</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Login -->
    <string name="login_register_your_self">Hello, Register yourself</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">This name is too short</string>
    <string name="error_field_required">This field is required</string>

    <!-- Map -->
    <string name="content_desc_map_toggle">Toggle map type</string>
    <string name="content_desc_gps_location">Move to current location</string>
    <string name="content_desc_zoom_in">Zoom in</string>
    <string name="content_desc_zoom_out">Zoom out</string>
    <string name="map_add_content_header">Enter details</string>
    <string name="map_disease_name">Disease name</string>
    <string name="map_date_of_sowing">Date of sowing</string>
    <string name="map_date_of_survey">Date of survey</string>
    <string name="map_disease_severity_score">Disease severity score</string>
    <string name="map_pest_name">Pest name</string>
    <string name="map_pest_infestation_count">Pest infestation count</string>
    <string name="map_crop_stage">Crop Stage</string>

    <string-array name="map_crop_stages">
        <item>Vegitative</item>
        <item>Flowering</item>
        <item>Pod forming</item>
        <item>Seed filling</item>
        <item>Oil accumulation</item>
    </string-array>

    <!-- Export -->
    <string name="export_dialog_hint">Enter a name for export file</string>
    <string name="export_label">Export your data</string>
    <string name="export_text">Text</string>
    <string name="export_pdf">PDF</string>
    <string name="export_csv">CSV (Excel)</string>

    <!-- Tag keys -->
    <string name="tag_latitude">tag_latitude</string>
    <string name="tag_longitude">tag_longitude</string>
    <string name="tag_year">tag_year</string>
    <string name="tag_month">tag_month</string>
    <string name="tag_day">tag_day</string>
    <string name="toggle_out">Show Tabs</string>
    <string name="toggle_in">Hide Tabs</string>
    <string name="spinner_value">Spinner Value</string>

    <!-- Preference Keys -->
    <string name="key_map_zoom_enabled">map_zoom_enabled</string>
    <string name="key_map_state__save_enabled">map_state__save_enabled</string>
    <string name="map_summary">Settings for Map</string>
    <string name="map_zoom_enable_summary">Show zoom controls</string>
    <string name="map_state_save_summary">Save last map state</string>
    <string name="about">About</string>
    <string name="about_summary">Save last map state</string>
    <string name="version">Version 1.0 beta</string>
    <string name="contact">Contact</string>
    <string name="contact_summary">Contact us</string>
    <string name="contact_email">support@ceeq.in</string>

</resources>